fix: make progress bar visible

--- a/src/components/ProgressBar/ProgressBar.css
+++ b/src/components/ProgressBar/ProgressBar.css
@@ -1,6 +1,6 @@
 .ProgressBar {
   position: absolute;
-  bottom: 0;
+  bottom: 2.5rem;
   width: 100%;
 }
 
